--- a/image2.html
+++ b/image2.html
@@ -5,15 +5,15 @@
     <title>Illinois State University</title>
   </head>
   <body>
-    <h1>Protect your Eyes!</h1>
+    <h1>Display your Poster!</h1>
         <h2>Reddy Heilig</h2> 
           <ul>
       <li><a href="index.html">Eye Safety</a></li>
       <li><a href="image2.html">Poster Exhibition</a></li>
       <li><a href="image3.html">Brookfield Zoo</a></li>
         </ul>
-        <img src="eyes.JPEG" alt=Eyes >
+        <img src="Posters.png" alt=Poster Exhibit >
 
-        <p>A reminder to protect your eyes in the workplace.</p>
+        <p>Advertisement for a poster exhibit funded by the Federal Art Project.</p>
     </body>
 </html>
