--- a/image3.html
+++ b/image3.html
@@ -5,15 +5,15 @@
     <title>Illinois State University</title>
   </head>
   <body>
-    <h1>Protect your Eyes!</h1>
+    <h1>Visit the Zoo!</h1>
         <h2>Reddy Heilig</h2> 
           <ul>
       <li><a href="index.html">Eye Safety</a></li>
       <li><a href="image2.html">Poster Exhibition</a></li>
       <li><a href="image3.html">Brookfield Zoo</a></li>
         </ul>
-        <img src="eyes.JPEG" alt=Eyes >
+        <img src="Zoo.gif" alt=The Brookfield Zoo>
 
-        <p>A reminder to protect your eyes in the workplace.</p>
+        <p>Advertisement for The Brookfield Zoo, featuring a black panther.</p>
     </body>
 </html>
