--- a/Blank1200px.html
+++ b/Blank1200px.html
@@ -3,12 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Blank 1200</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Monoton&family=Saira+Stencil+One&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 	<link href="Blank1200px.css" rel="stylesheet" type="text/css">
 </head>
-	<div id="wrapper">
 		<!-- These dummy columns are just to show the grid columns, replace with your HTML -->
 
 <body>
+	<div id="wrapper">
   <div class="wrapper2">
   <header>
 	<nav>
@@ -44,46 +48,30 @@
 		<a class="shows" href="#" target="_blank">BOOK NOW</a>
 		</p>
 		<img class="live2" src="IMG_6076.jpg" alt="Live"><br>
-			<p>Saturday, Nov 15<br>
-		Philadelphia, PA<br>
-		<a class="shows" href="#" target="_blank">BOOK NOW</a>
-		</p>
-		<img class="live2" src="IMG_6076.jpg" alt="Live"><br>
-		<p>Thursday, Nov 13<br>
-		Detroit, MI<br>
-		<a class="shows" href="#" target="_blank">BOOK NOW</a>
-		</p>
-		<img class="live2" src="IMG_6076.jpg" alt="Live"><br>
-			<p>Friday, Nov 14<br>
-		Cincinnati, OH<br>
-		<a class="shows" href="#" target="_blank">BOOK NOW</a>
-		</p>
-		<img class="live2" src="IMG_6076.jpg" alt="Live"><br>
-			<p>Saturday, Nov 15<br>
-		Philadelphia, PA<br>
-		<a class="shows" href="#" target="_blank">BOOK NOW</a>
-		</p>
-		<img class="live2" src="IMG_6076.jpg" alt="Live"><br>
+		<p>The above are simply demonstrations of how the shows will be displayed; I currently do not have any booked</p>
 	</div>
   <main>
   <h2>NEWS</h2>
-  <img class="idkman" src="SIMPLE NOCTURNAL MINDS.jpg" alt="Simple Nocturnal Minds">
-  <h3>SIMPLE NOCTURNAL MINDS Out on All Platforms</h3>
-  <p class="huh">Right here will be some paragraphs giving a description of my latets album/whatever my latest work is. The image of it will be displayed to the left Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo aperiam commodi ex harum labore, fugit odio ullam quas cumque excepturi suscipit numquam et at quis nulla obcaecati alias fugiat eum?.
+  <img class="idkman" src="pocket.jpg" alt="Pocket Change - Single">
+  <h3>New Single "Pocket Change" Out on All Platforms</h3>
+  <p class="huh">Right here will be some paragraphs giving a description of my latest album/whatever my most recent work is. The image of it will be displayed to the left Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo aperiam commodi ex harum labore, fugit odio ullam quas cumque excepturi suscipit numquam et at quis nulla obcaecati alias fugiat eum?.
   
-	<p class="huh">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error modi maxime, labore officia eaque nostrum praesentium consectetur, doloremque, laboriosam dolor natus nihil dolore. Harum nostrum minus hic dolore quaerat assumenda. Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+	<iframe width="45%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2210415674&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/raverapture" title="Rave Rapture" target="_blank" style="color: #cccccc; text-decoration: none;"></a> · <a href="https://soundcloud.com/raverapture/pocket-change-feat-wunderlain-getto" title="Pocket Change (feat. Wunderlain GETTO)" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
 
 	<p class="huh3">LISTEN NOW</p>
-	<img class="imgmarg" src="Spotify_Primary_Logo_RGB_Green-2.png" alt="Spotify">
-	<img class="imgmarg" src="Apple_Music_icon.svg-2.png" alt="Apple Music">
-	<img src="Youtube_Music_icon.svg-2.png" alt="YouTube Music">
+	<span class="spotify"><a class="bi bi-spotify" href="https://open.spotify.com/track/4CauqfV8JrjS0iZ6mB6QBH?si=f2e84a277efb4556" target="_blank"></a></span>
+	<span class="apple"><a class="bi bi-apple-music" href="https://music.apple.com/us/artist/rave-rapture/1797529733" target="_blank"></a></span>
+	<span class="youtube"><a class="bi bi-youtube" href="https://www.youtube.com/watch?v=DkTsq1qqkGo" target="_blank"></a></span>
 
 	<img class="social" src="IMG_6181_300x200.jpg" alt="Instagram Post">
   <p class="huh2">This will be a section discussing recent news, be it on social media, live events, new music or whatever. The image below will link to my Solo, which has all of my social media. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, distinctio. Eos ex facilis, asperiores voluptas, at ducimus, in dolorem deserunt quibusdam dolores ea! Quae sunt laborum possimus ut mollitia officia? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse deleniti similique autem neque, ad dolor aut commodi iste et consectetur ea illum, mollitia facere, velit magni iusto sunt sit quisquam.</p>
-  <a href="#"><img src="images.png" alt=Solo></a>
-    </div>
-</body>
-</html>
+  		<span class="forsolo"><a class="bi bi-link" href="https://solo.to/raverapture" target="_blank"></a></span><br> <p class="soctext"> <<< RAVE RAPTURE ON SOCIAL MEDIA</p>
+    <br>
+	<footer class="foot">
+	Copyright Rave Rapture 2025.
+</footer>
+
+	</div>
 
 	</div>
 </body>
