--- a/Blank1200px.html
+++ b/Blank1200px.html
@@ -7,7 +7,11 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Monoton&family=Saira+Stencil+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-	<link href="Blank1200px.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.1/dist/carousel/carousel.css"/>
+		<link href="Blank1200px.css" rel="stylesheet" type="text/css">
+
+		<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.1/dist/carousel/carousel.umd.js"></script>
+
 </head>
 		<!-- These dummy columns are just to show the grid columns, replace with your HTML -->
 
@@ -63,7 +67,11 @@
 	<span class="apple"><a class="bi bi-apple-music" href="https://music.apple.com/us/artist/rave-rapture/1797529733" target="_blank"></a></span>
 	<span class="youtube"><a class="bi bi-youtube" href="https://www.youtube.com/watch?v=DkTsq1qqkGo" target="_blank"></a></span>
 
-	<img class="social" src="IMG_6181_300x200.jpg" alt="Instagram Post">
+	<div class="f-carousel" id="myCarousel">
+  		<div class="f-carousel__slide"><img src="s1.jpg" alt="Post"></div>
+  		<div class="f-carousel__slide"><img src="s2.jpg" alt="Post"></div>
+		<div class="f-carousel__slide"><img src="s3.jpg" alt="Post"></div>
+	</div>
   <p class="huh2">This will be a section discussing recent news, be it on social media, live events, new music or whatever. The image below will link to my Solo, which has all of my social media. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, distinctio. Eos ex facilis, asperiores voluptas, at ducimus, in dolorem deserunt quibusdam dolores ea! Quae sunt laborum possimus ut mollitia officia? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse deleniti similique autem neque, ad dolor aut commodi iste et consectetur ea illum, mollitia facere, velit magni iusto sunt sit quisquam.</p>
   		<span class="forsolo"><a class="bi bi-link" href="https://solo.to/raverapture" target="_blank"></a></span><br> <p class="soctext"> <<< RAVE RAPTURE ON SOCIAL MEDIA</p>
     <br>
@@ -74,5 +82,13 @@
 	</div>
 
 	</div>
+	<script>
+	const container = document.getElementById("myCarousel");
+const options = {
+  // Your custom options
+};
+
+Carousel(container, options).init();
+</script>
 </body>
 </html>
