--- a/Blank1200px.html
+++ b/Blank1200px.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Blank 1200</title>
+	<title> RR Home/News</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Monoton&family=Saira+Stencil+One&display=swap" rel="stylesheet">
@@ -20,14 +20,14 @@
   <div class="wrapper2">
   <header>
 	<nav>
-		<li><a href="#" target="_blank">news</a></li>
-		<li><a href="#" target="_blank">music</a></li>
-		<li><a href="#" target="_blank">videos</a></li>
-		<li><a href="#" target="_blank">download</a></li>
-		<li><a href="#" target="_blank">about</a></li>
-		<li><a href="#" target="_blank">shop</a></li>
-		<li><a href="#" target="_blank">gallery</a></li>
-		<li><a href="#" target="_blank">contact</a></li>
+		<li><a href="Blank1200px.html">news</a></li>
+		<li><a href="music.html">music</a></li>
+		<li><a href="#">videos</a></li>
+		<li><a href="#">download</a></li>
+		<li><a href="about.html">about</a></li>
+		<li><a href="#">shop</a></li>
+		<li><a href="#">gallery</a></li>
+		<li><a href="#">contact</a></li>
 	</nav>
 		</header>
   <h1>RAVE RAPTURE</h1>
@@ -56,27 +56,28 @@
 	</div>
   <main>
   <h2>NEWS</h2>
-  <img class="idkman" src="pocket.jpg" alt="Pocket Change - Single">
-  <h3>New Single "Pocket Change" Out on All Platforms</h3>
-  <p class="huh">Right here will be some paragraphs giving a description of my latest album/whatever my most recent work is. The image of it will be displayed to the left Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo aperiam commodi ex harum labore, fugit odio ullam quas cumque excepturi suscipit numquam et at quis nulla obcaecati alias fugiat eum?.
+  <img class="idkman" src="SIMPLE NOCTURNAL MINDS.jpg" alt="Simple Nocturnal Minds">
+  <h3>Simple Nocturnal Minds - Out on All Platforms</h3>
+  <p class="huh">what kind of thoughts do you think right before the lights go out each night. usually the actual lights go out but your brain keeps going for a while until the lack of light puts you to sleep. what exactly is going on up there while you drift into unconciousness? these are some findings, some ideas, some simple music for nocturnal deliberation. recommended after 10pm.</p>
   
 	<iframe width="45%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2210415674&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/raverapture" title="Rave Rapture" target="_blank" style="color: #cccccc; text-decoration: none;"></a> · <a href="https://soundcloud.com/raverapture/pocket-change-feat-wunderlain-getto" title="Pocket Change (feat. Wunderlain GETTO)" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
 
 	<p class="huh3">LISTEN NOW</p>
-	<span class="spotify"><a class="bi bi-spotify" href="https://open.spotify.com/track/4CauqfV8JrjS0iZ6mB6QBH?si=f2e84a277efb4556" target="_blank"></a></span>
+	<span class="spotify"><a class="bi bi-spotify" href="https://open.spotify.com/album/2ZhfkNPo54UksTPT8OSm1A?referral=labelaffiliate&utm_source=1100lBGzrmgz&utm_medium=Indie_Distrokid&utm_campaign=labelaffiliate" target="_blank"></a></span>
 	<span class="apple"><a class="bi bi-apple-music" href="https://music.apple.com/us/artist/rave-rapture/1797529733" target="_blank"></a></span>
-	<span class="youtube"><a class="bi bi-youtube" href="https://www.youtube.com/watch?v=DkTsq1qqkGo" target="_blank"></a></span>
+	<span class="youtube"><a class="bi bi-youtube" href="https://music.youtube.com/playlist?list=OLAK5uy_lxtl1Oc6waEtxOyLsA6LLwtId6Uc4oaHE" target="_blank"></a></span>
 
 	<div class="f-carousel" id="myCarousel">
   		<div class="f-carousel__slide"><img src="s1.jpg" alt="Post"></div>
   		<div class="f-carousel__slide"><img src="s2.jpg" alt="Post"></div>
 		<div class="f-carousel__slide"><img src="s3.jpg" alt="Post"></div>
 	</div>
-  <p class="huh2">This will be a section discussing recent news, be it on social media, live events, new music or whatever. The image below will link to my Solo, which has all of my social media. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, distinctio. Eos ex facilis, asperiores voluptas, at ducimus, in dolorem deserunt quibusdam dolores ea! Quae sunt laborum possimus ut mollitia officia? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse deleniti similique autem neque, ad dolor aut commodi iste et consectetur ea illum, mollitia facere, velit magni iusto sunt sit quisquam.</p>
+  <p class="huh2">Rave Rapture remains elusive on social media as his album rolls out into full effect. There are rumors of higher budgets for music videos, PROTOTYPE finally growing some balls and making some music, and live shows being in the works. Rave claims his first performances will happen near his home turf in Chicago, though conversations between PROTOTYPE members have proven that global impact needs to take shape. Nomadthemoron keeps finding himself in Los Angeles; it seems Rave Rapture might have to take a vacation.</p>
+  <p class="huh2">Discussions about release format have also been had, with Rave seeming to steer more towards releasing singles as opposed to his album format he has practiced since starting to make music. How, one might ask, can this be portrayed through only two albums? It turns out there are many, many more, in undisclosed locations, under an undisclosed name. You could probably guess what it is, though.</p>
   		<span class="forsolo"><a class="bi bi-link" href="https://solo.to/raverapture" target="_blank"></a></span><br> <p class="soctext"> <<< RAVE RAPTURE ON SOCIAL MEDIA</p>
     <br>
 	<footer class="foot">
-	Copyright Rave Rapture 2025.
+	© Copyright Rave Rapture 2025.
 </footer>
 
 	</div>
