--- a/music.html
+++ b/music.html
@@ -19,14 +19,14 @@
   <div class="wrapper2">
   <header>
 	<nav>
-		<li><a href="#" target="_blank">news</a></li>
-		<li><a href="#" target="_blank">music</a></li>
-		<li><a href="#" target="_blank">videos</a></li>
-		<li><a href="#" target="_blank">download</a></li>
-		<li><a href="#" target="_blank">about</a></li>
-		<li><a href="#" target="_blank">shop</a></li>
-		<li><a href="#" target="_blank">gallery</a></li>
-		<li><a href="#" target="_blank">contact</a></li>
+		<li><a href="Blank1200px.html">news</a></li>
+		<li><a href="music.html">music</a></li>
+		<li><a href="#">videos</a></li>
+		<li><a href="#">download</a></li>
+		<li><a href="about.html">about</a></li>
+		<li><a href="#">shop</a></li>
+		<li><a href="#">gallery</a></li>
+		<li><a href="#">contact</a></li>
 	</nav>
 		</header>
   <h1>RAVE RAPTURE</h1>
@@ -55,29 +55,38 @@
 	</div>
   <main>
   <h2>RAVE RAPTURE DISCOGRAPHY</h2>
-	<iframe class="bandcamp" style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=1449357408/size=large/bgcol=333333/linkcol=e32c14/transparent=true/" seamless><a href="https://raverapture.bandcamp.com/album/simple-nocturnal-minds">Simple Nocturnal Minds by Rave Rapture</a></iframe>
+	<iframe class="bandcamp" style="border: 0; width: 350px; height: 550px;" src="https://bandcamp.com/EmbeddedPlayer/album=1449357408/size=large/bgcol=333333/linkcol=e32c14/transparent=true/" seamless><a href="https://raverapture.bandcamp.com/album/simple-nocturnal-minds">Simple Nocturnal Minds by Rave Rapture</a></iframe>
 	<h3>Simple Nocturnal Minds</h3>
 	<p class="desc">i stayed up all night and realized there is nothing much happening behind my eyes</p><br>
 	<p class="desc">every night i grow older with young intentions</p><br>
 	<p class="desc">listen</p>
-		<span class="spotify"><a class="bi bi-spotify" href="https://open.spotify.com/album/2ZhfkNPo54UksTPT8OSm1A?referral=labelaffiliate&utm_source=1100lBGzrmgz&utm_medium=Indie_Distrokid&utm_campaign=labelaffiliate" target="_blank"></a></span>
+	<span class="spotify"><a class="bi bi-spotify" href="https://open.spotify.com/album/2ZhfkNPo54UksTPT8OSm1A?referral=labelaffiliate&utm_source=1100lBGzrmgz&utm_medium=Indie_Distrokid&utm_campaign=labelaffiliate" target="_blank"></a></span>
 	<span class="apple"><a class="bi bi-apple-music" href="https://music.apple.com/us/artist/rave-rapture/1797529733" target="_blank"></a></span>
 	<span class="youtube"><a class="bi bi-youtube" href="https://music.youtube.com/playlist?list=OLAK5uy_lxtl1Oc6waEtxOyLsA6LLwtId6Uc4oaHE" target="_blank"></a></span>
-
+	<span class="spotembed"><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/17tUUwN83BYHeTc8oM4c9i?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></span>
+	<h3 class="h32">Suburbans</h3>
+	<p class="desc2">sometimes two suburbans put their heads together</p><br>
+	<p class="desc2">prototype owned and operated; 15120; 60608</p><br>
+	<p class="desc2">it's nomad!</p>
+	<span class="spotify2"><a class="bi bi-spotify" href="https://open.spotify.com/album/17tUUwN83BYHeTc8oM4c9i?si=y_41Tg6pQYCf6uC4naprZQ" target="_blank"></a></span>
+	<span class="apple2"><a class="bi bi-apple-music" href="https://music.apple.com/us/album/suburbans-feat-nomadthemoron-ep/1824836230" target="_blank"></a></span>
+	<span class="youtube2"><a class="bi bi-youtube" href="https://music.youtube.com/playlist?list=OLAK5uy_k2X0WmH6IhqY15FRCsPwXBtGhICfmCSfs&si=Edxk4VG6tJUlAL0u" target="_blank"></a></span>
+	<span class="spotembed2"><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/1RQacoQliY5scGiJzQh15D?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></span>
+	<h3 class="h33">Atmosphere</h3>
+	<p class="desc3">fascinating how humans never look up</p><br>
+	<p class="desc3">what exactly are we missing that happens to be</p><br>
+	<p class="desc3">right over our heads?</p>
+	<span class="spotify3"><a class="bi bi-spotify" href="https://open.spotify.com/album/1RQacoQliY5scGiJzQh15D?si=4cGZxC-jS4iiQb45ECX-PQ" target="_blank"></a></span>
+	<span class="apple3"><a class="bi bi-apple-music" href="https://music.apple.com/us/album/atmosphere/1810055945" target="_blank"></a></span>
+	<span class="youtube3"><a class="bi bi-youtube" href="https://music.youtube.com/playlist?list=OLAK5uy_kFECwvlzLT85tXmIuYNf2fXMqRuP16cs4&si=ykVmwkG-ctWVMqO9" target="_blank"></a></span>
 	<footer class="foot">
-	Copyright Rave Rapture 2025.
+	© Copyright Rave Rapture 2025.
 </footer>
 
 	</div>
 
 	</div>
-	<script>
-	const container = document.getElementById("myCarousel");
-const options = {
-  // Your custom options
-};
+<script src="https://open.spotify.com/embed/iframe-api/v1" async></script>
 
-Carousel(container, options).init();
-</script>
 </body>
 </html>
