--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
 	<nav>
 		<li><a href="Blank1200px.html">news</a></li>
 		<li><a href="music.html">music</a></li>
-		<li><a href="#">videos</a></li>
-		<li><a href="#">download</a></li>
 		<li><a href="about.html">about</a></li>
-		<li><a href="#">shop</a></li>
-		<li><a href="#">gallery</a></li>
-		<li><a href="#">contact</a></li>
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
+		<li><a href="#"></a></li>
 	</nav>
 		</header>
   <h1>RAVE RAPTURE</h1>
