--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
   <div class="wrapper2">
   <header>
 	<nav>
-		<li><a href="Blank1200px.html">news</a></li>
+		<li><a href="home.html">home</a></li>
 		<li><a href="music.html">music</a></li>
 		<li><a href="about.html">about</a></li>
 		<li><a href="#"></a></li>
