--- a/music.html
+++ b/music.html
@@ -19,7 +19,7 @@
   <div class="wrapper2">
   <header>
 	<nav>
-		<li><a href="Blank1200px.html">news</a></li>
+		<li><a href="home.html">news</a></li>
 		<li><a href="music.html">music</a></li>
 		<li><a href="about.html">about</a></li>
 		<li><a href="#"></a></li>
