--- a/heisen.html
+++ b/heisen.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Blank Page</title>
+    <title>Heisenberg Spin</title>
     <link href="heisen.css" rel="stylesheet" type="text/css">
 </head>
 
